--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/cat2.jpg">
   <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <meta name="author" content="862180136">
 
-  <title>John Doe - Business Administration</title>
+  <title>Amina Ganzorig - Marketing</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Amina Ganzorig</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/aminaganzorig.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,27 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Amina Ganzorig
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Marketing📚</div>
+        <p class="lead mb-4">Hello, my name is Amina Ganzorig and I am currently a second-year marketing major at the University of California. I grew up in Sacramento, California, and lived there with my family until I began college here in Southern California to achieve my goals of furthering my education. I love music, painting, and everything artistic, but there is a more technical side to me that can come out when it's time for business.<br><br>
 
-        Enter bio here<br><br>
-
-        Enter bio here
+        I came to college with the idea of exploring my possibilities and finding a career path that will suit me in the long run. College has had its ups and downs, but there is no problem that cannot be fixed. Being a business major has taught me many different skills in a variety of areas from literature to computer science and dancing. As a second-year, I still lack attributes but I am putting in the effort to learn and grow more rapidly in order for me to get an internship and career in the future. On the side, I am trying to learn more about stocks and the economy. I believe stocks are a huge part of careers in the field of business, so even if this is not the exact field of study I end up in, I will have the skills wherever I go, and especially in this modern world coding and stocks can help you anywhere.
+Personally, I am looking at a career in the marketing industry since I am a more creative, free-minded person. I want to connect with people, see what they like, and don't in order to formulate an advertisement or appeal toward a certain product to reach distinct groups of people. Marketing seems like the free-roaming social butterfly in the world of business, so I think my out of the box thinking and work ethic will benefit me through this kind of career.
+        I would also like to become a CEO, perhaps of a fashion brand. I love clothes because they offer so much legroom to play around with. Everyone wears clothes, there are different ways to present yourself through your clothes from a professional in the office checking off busy meetings to an "at-home" mother of three taking a nice stroll through the park or grocery shopping. We run through clothes like no one's business so I believe there is always more to be done in this area, and I am personally taken up by it. 
+The future is bright but I am still unsure as to who I want to be or what I want to do, but I believe that I will do well wherever I go because if I don't believe in myself who will believe in me? Whether I am looking at a graph all day, pitching sales Ideas to a big company, or have a company of my own, there are steps and I am happy to take these steps in order to guide myself into the right direction of fiercely driven financial and mental success.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="linkedin" href="https://linkedin.com">
+          <a target="_blank" id="linkedin" href="https://linkedin.com/aminaganzorig">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="github" href="https://github.com">
+          <a target="_blank" id="github" href="https://github.com/aminaganzorig">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="twitter" href="https://twitter.com">
+          <a target="_blank" id="twitter" href="https://twitter.com/aminaganzorig">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="email" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="email" href="aganz001@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -95,9 +96,9 @@
             <h3 class="mb-0">Developer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Medical Assistant apprentice at Kaiser Permanente<br> 
+              • Sales Associate at Garage<br>
+              • Doordash Driver<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -107,33 +108,33 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Medical Assistant Apprentice</h3>
+            <div class="subheading mb-3"><a Kaiser Permanente="_blank" href="KaiserPermanente.com"></a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Checking patients vitals<br>
+              • Computer work<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">December 2018 - June 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Sales Associate</h3>
+            <div class="subheading mb-3"><a Garage="_blank" href="https://garageclothing.com</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Cashier<br>
+            • Fitting Room operator<br>
+            • Prepared shipement<br>
+            • GReeted customers when they came in<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">June 2019 - Septemeber 2019</span>
           </div>
         </div>
 
@@ -152,33 +153,21 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Pre-Business</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">June 2023</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Pre-Business</div>
+            <div>Marketing</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">June 2023</span>
           </div>
         </div>
 
@@ -191,7 +180,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/IMG_1877.PNG" width="500px">
+            <img src="img/IMG_1878.PNG" width="500px"><br>
+            <img src="img/IMG_1875.PNG" width="500px">
+            <img src="img/IMG_1876.PNG" width="500px"><br>
         </center>
       </div>
     </section>
